# Meal-planner-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  LICENSE  Makefile  PLAN.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  SPEC.md  START_HERE.md  TASKS.md  WEEKLY_PLANNER_PLAN.md  agent.md  app.py  claude.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.streamlit/: config.toml  config.yaml  config.yaml.example
data/: active_recipes.json  cooking_chat_1a5aae3e-cdb6-4a0d-934d-dfeb7fe06294.json  cooking_chat_6c7bc25d-facf-4633-8496-10a4e6b383c1.json  cooking_chat_9279e022-7858-4e9b-87b2-4bf91bca565d.json  cooking_chat_d8ed3f6d-591f-4944-ac3b-32480d62324b.json  cooking_chat_f74cc727-d851-4b96-a6f5-abcc939c2e44.json  cooking_chat_history.json  generated_recipes.json  meal_history.json  meal_history.md  notes.json  pantry.json  preferences.md  prompts.json  recipe_book.json  recipes.json  shopping_list.json  weekly_plan.json  weekly_plan.md
data/pantry/: fresh.md  shopping_list.md  staples.md
data/recipes/: generated.md  liked.md  loved.md  not_again.md
lib/: __init__.py  active_recipe_manager.py  auth.py  chat_manager.py  constants.py  data_migration.py  exceptions.py  file_manager.py  generated_recipes_manager.py  history_manager.py  ingredient_agent.py  ingredient_parser.py  ingredient_schema.py  llm_agents.py  llm_core.py  logging_config.py  mobile_ui.py  notes_manager.py  pantry_manager.py  prompt_manager.py  recipe_book_helpers.py  recipe_book_manager.py  recipe_feedback.py  recipe_parser.py  recipe_store.py  shopping_list_manager.py  ui.py  vision.py  weekly_plan_manager.py
pages/: __init__.py  capture_recipe.py  cooking_mode.py  generate_recipes.py  meal_history.py  notes.py  pantry.py  prompts.py  recipe_book.py  shopping_list.py  update_pantry.py  weekly_planner.py
plant-tracker-learnings/: README.md
scripts/: migrate_to_json.py  setup_auth.py  verify_history_migration.py  verify_pantry_migration.py  verify_shopping_list_migration.py  verify_weekly_plan_migration.py
tests/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_ingredient_parser.py  test_shopping_list_manager.py
